<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:theme="@style/AppTheme"
    tools:context="asiiboo.weeklyworkouts.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:paddingBottom="90dp"
        android:paddingTop="30dp"
        android:text="@string/welcome_message"
        android:textColor="@color/colorTextLight"
        android:textSize="@dimen/title_font_size"
        android:fontFamily="sans-serif-light" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:padding="0dp"
        android:text="@string/workout_button_message"
        android:textSize="16sp"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorDarkAccent">

        <TextView
            android:id="@+id/statsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:gravity="top|end"
            android:text="@string/workout_stats"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/stats_font_size" />

   <!--     <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:max="500"
            android:progress="0"
            android:progressDrawable="@drawable/circular" />
-->
        <ImageView
            android:id="@+id/statsCharm"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@id/statsTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/statsData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/statsCharm"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/stat1"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/stats_data_font_size"
                android:textColor="@android:color/holo_blue_dark"
                android:gravity="center_horizontal"
                android:text="@string/day_streak_data"/>
            <TextView
                android:id="@+id/stat2"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/stats_data_font_size"
                android:textColor="@android:color/holo_blue_dark"
                android:gravity="center_horizontal"
                android:text="@string/total_days_data"/>
            <TextView
                android:id="@+id/stat3"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/stats_data_font_size"
                android:textColor="@android:color/holo_blue_dark"
                android:gravity="center_horizontal"
                android:text="@string/completion_data"/>
            <TextView
                android:id="@+id/stat4"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/stats_data_font_size"
                android:textColor="@android:color/holo_blue_dark"
                android:gravity="center_horizontal"
                android:text="@string/goal_data"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/statsData"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/statLabel1"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:text="@string/statLabel1"
                android:textColor="@color/colorTextLight"/>
            <TextView
                android:id="@+id/statLabel2"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:text="@string/statLabel2"
                android:textColor="@color/colorTextLight"/>
            <TextView
                android:id="@+id/statLabel3"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:text="@string/statLabel3"
                android:textColor="@color/colorTextLight"/>
            <TextView
                android:id="@+id/statLabel4"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:text="@string/statLabel4"
                android:textColor="@color/colorTextLight"/>
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encyclopedia"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorButton2"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        android:padding="0dp"
        android:textSize="16sp"
        android:visibility="visible" />


</LinearLayout>
