<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/banner_card"
        android:src="@drawable/new_exercise"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:background="#FFFFBB33"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name" />

    <AutoCompleteTextView
        android:id="@+id/title_editText_card"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:completionThreshold="1"
        android:hint="@string/input_title" />
    <EditText
        android:id="@+id/description_editText_card"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/input_description"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/sets"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/reps"
            android:textSize="16sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/sets_numPic_card"
            android:layout_width="0px"
            android:layout_height="wrap_content"

            android:layout_weight="1"/>

        <NumberPicker
            android:id="@+id/reps_numPic_card"
            android:layout_width="0px"
            android:layout_height="wrap_content"

            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>



