<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/banner_iv"
        android:src="@drawable/popup_header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:background="#FFFFBB33"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name" />
    <AutoCompleteTextView
        android:id="@+id/title_popup"
        android:inputType="textCapWords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:completionThreshold="1"
        android:hint="@string/input_title" />
    <EditText
        android:id="@+id/description_popup"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/input_description"/>
</LinearLayout>



